[project]
name = "nonebot-adapter-wechatclaw"
version = "0.1.0"
description = "Nonebot Adapter of WeChatClaw"
authors = [
    {name = "Decrabbit", email = "decrabbit@163.com"},
]
dependencies = ["nonebot2>=2.4.2", "pycryptodome>=3.20.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
weixin-login = "nonebot.adapters.weixin.login:main"

[project.entry-points.nb_scripts]
weixin-login = "nonebot.adapters.weixin.login:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["nonebot"]


[project.optional-dependencies]
login = ["httpx>=0.27.0", "qrcode>=8.2"]

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["openclaw-weixin", "adapter-milky", "wechatbot.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "UP",
    "C",
    "T",
    "Q",
    "I",
    "RUF",
    "LOG",
    "FLY",
    "ICN",
    "PL",
    "C4",
    "RSE",
    "RET",
    "TC",
    "PTH",
    "PERF",
    "UP",
    "FURB",
    "A",
    "B",
    "ANN",
    'DTZ',
    "SIM",
    "N"
]
ignore = ["PLR0912", "PLR0913", "PLR0915", "PLR2004", "UP037", "C901", "ANN401"]

[tool.ruff.lint.isort]
length-sort = true

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.10"
typeCheckingMode = "basic"
disableBytesTypePromotions = true